<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/back_item"
        android:title="@string/back"
        android:orderInCategory="4"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom"
        android:visible="false"/>

    <item
        android:id="@+id/open_note"
        android:title="@string/open_selected_note"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_zoom"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/edit_note"
        android:title="@string/edit_task"
        android:orderInCategory="2"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom"/>



    <item
        android:id="@+id/delete_notes"
        android:title="@string/delete_selected_note"
        android:orderInCategory="4"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="ifRoom"/>



</menu>